# Yisen-Coding

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
course_utils/: notebook_check.py  notebook_loader.py
homework/: README.md
homework/hw00/: homework.ipynb
homework/hw00/tests/: cases.py  test_notebook.py  traces.py
homework/hw01/: homework.ipynb
homework/hw01/tests/: cases.py  test_notebook.py  traces.py
lectures/: README.md
lectures/01-Data-Expression-Variables/: notes.ipynb
lectures/01_functions_and_tests/: notes.ipynb
